# TEM-ruler

./: .gitignore  LICENSE  README.md  TEM_length.py  TEM_ring.py  pyproject.toml  setup.cfg
src/TEM_ruler/: TEM_length.py  TEM_ring.py  TEM_test.py
tests/: 1d_ring_test_settings.txt  1d_test_settings.txt  2d_ring_test_settings.txt  2d_test_settings.txt  default_settings.txt  ring_default_settings.txt
