[metadata]
name = TEM-ruler
version = 0.0.1
author = Emily Wu
author_email = emwu@mit.edu
description = A tool for measuring lengths using grayscale profiles from TEM images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ewuirl/TEM-ruler.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    TEM_test = TEM_ruler.TEM_test

[options.packages.find]
where = src